--- a/source/assets/_sass/base/selection.sass
+++ b/source/assets/_sass/base/selection.sass
@@ -1,11 +1,10 @@
 
-// Specify text selection background color and omit drop shadow
 ::-moz-selection
-  background-color: $color-primary // Required when declaring ::selection
+  background-color: $color-primary
   color: $color-white
   text-shadow: none
 
 ::selection
-  background-color: $color-primary // Required when declaring ::selection
+  background-color: $color-primary
   color: $color-white
   text-shadow: none
