--- a/source/assets/_sass/main.sass
+++ b/source/assets/_sass/main.sass
@@ -8,7 +8,7 @@
 @import "base/selection"
 @import "base/lists"
 @import "base/table"
-@import "base/forms"
+// @import "base/forms"
 @import "base/buttons"
 
 @import "components/paginate"
