Change ruby version, add yarn and change some stylesheets

--- a/source/assets/_sass/base/base.sass
+++ b/source/assets/_sass/base/base.sass
@@ -24,7 +24,7 @@ hr
     letter-spacing: .5em
     content: '...'
     display: inline-block
-    margin-left: -.5em
+    margin-left: -1em
     line-height: 1
     color: rgba($color-base, .5)
     +position(absolute, 0 null null 50%)
