start accessibility home page

--- a/source/assets/_sass/base/base.sass
+++ b/source/assets/_sass/base/base.sass
@@ -29,6 +29,16 @@ hr
     color: rgba($color-base, .5)
     +position(absolute, 0 null null 50%)
 
+.sr-only
+  position: absolute
+  width: 1px
+  height: 1px
+  padding: 0
+  margin: -1px
+  overflow: hidden
+  clip: rect(0,0,0,0)
+  border: 0
+
 .main
   position: relative
   overflow-x: hidden
