--- a/source/partials/_nav.html.slim
+++ b/source/partials/_nav.html.slim
@@ -1,5 +1,7 @@
 #navbar
   = link_to '#navbar', class: 'navbar-toggle navbar-toggle__open', role: :button, :data => { :toggle => 'nav' } do
+    span.sr-only
+      = 'Open navigation'
     svg.rect-top height="4" viewbox=("0 9 40 4") width="40" xmlns="http://www.w3.org/2000/svg"
       rect fill="#fdfffc" fill-rule="evenodd" height="3.223" rx="1.611" width="39.012" y="9.425"
     svg.rect-middle height="4" viewbox=("0 9 40 4") width="40" xmlns="http://www.w3.org/2000/svg"
@@ -7,6 +9,8 @@
     svg.rect-bottom height="4" viewbox=("0 9 40 4") width="40" xmlns="http://www.w3.org/2000/svg"
       rect fill="#fdfffc" fill-rule="evenodd" height="3.223" rx="1.611" width="39.012" y="9.425"
   = link_to '#', class: 'navbar-toggle navbar-toggle__close', role: :button, :data => { :toggle => 'nav' } do
+    span.sr-only
+        = 'Close navigation'
     svg.rect-top height="4" viewbox=("0 9 40 4") width="40" xmlns="http://www.w3.org/2000/svg"
       rect fill="#fdfffc" fill-rule="evenodd" height="3.223" rx="1.611" width="39.012" y="9.425"
     svg.rect-middle height="4" viewbox=("0 9 40 4") width="40" xmlns="http://www.w3.org/2000/svg"
@@ -18,11 +22,11 @@
     .navbar__inner
       ul.nav
         li
-          = link_to t(:writing), '/blog', title: t(:writing)
+          = link_to t(:writing), '/blog'
         li
-          = link_to t(:about_me), local_path(t('paths.about')), title: t(:about_me)
+          = link_to t(:about_me), local_path(t('paths.about'))
         li
-          = link_to t(:experiments), 'https://codepen.io/nandomoreirame/', :target => :blank, title: t(:experiments)
+          = link_to t(:experiments), 'https://codepen.io/nandomoreirame/', :target => :blank
         / li
           / a href="#"  Projects
         li
