--- a/source/assets/_sass/components/article.sass
+++ b/source/assets/_sass/components/article.sass
@@ -5,7 +5,7 @@
   transition: box-shadow .25s ease-in-out
 
   &:hover
-    box-shadow: 0 .3em .5em rgba($color-gray, .1)
+    box-shadow: 0 15px 65px -10px rgba($color-gray, .3);
 
   img
     width: 100%
