--- a/source/layouts/layout.html.slim
+++ b/source/layouts/layout.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html.no-js lang="pt-br"
+html.no-js lang=t(:lang)
   head
     = partial "partials/head"
     meta content="#{t(:hello_iam)} #{site_author}, #{t(:front_dev)} #{t(:like_coffee)}" name="description"
