Fix about url, fix about link hover color

--- a/source/assets/_sass/base/base.sass
+++ b/source/assets/_sass/base/base.sass
@@ -5,7 +5,7 @@ body
   margin: 0
 
 body
-  background-color: $background-base
+  background-color: rgba(0, 0, 0, .05)
   line-height: $line-height-base
 
 hr
@@ -41,5 +41,4 @@ hr
 
 .main
   position: relative
-  overflow-x: hidden
   z-index: 5
