--- a/source/assets/_sass/components/article.sass
+++ b/source/assets/_sass/components/article.sass
@@ -1,11 +1,7 @@
 .article
   @extend .card
   margin-top: 0
-  margin-bottom: $spacing-base
-  transition: box-shadow .25s ease-in-out
-
-  &:hover
-    box-shadow: 0 15px 65px -10px rgba($color-gray, .3);
+  margin-bottom: $spacing-base * 2
 
   img
     width: 100%
