--- a/source/localizable/about.br.html.slim
+++ b/source/localizable/about.br.html.slim
@@ -18,9 +18,9 @@ section
         p
           = 'Olá, me chamo '
           strong itemprop="name"
-            = 'Fernando Moreira '
-          = '(como você pôde ver no titulo do site). '
-          strong= 'Moro em Curitiba/Paraná. '
+            = 'Fernando Moreira. '
+          = 'Moro em '
+          strong= 'Curitiba/Paraná. '
           span itemprop="jobTitle"
             = 'Trabalho como desenvolvedor front-end '
             / = 'na '
