--- a/source/localizable/about.en.html.slim
+++ b/source/localizable/about.en.html.slim
@@ -17,13 +17,13 @@ section
       div itemscope="" itemtype="http://schema.org/Person"
         p
           = "Hi! I'm "
-          strong itemprop="name"  Fernando Moreira
-          = ' (as you can see the name of my site).'
+          strong itemprop="name" Fernando Moreira.
           span itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress"
-            strong= " I live in Curitiba/Paraná. "
+            = " I live in "
+            strong= "Curitiba/Paraná. "
             = "I'm"
             span itemprop="jobTitle"
-              = ' Front-end developer '
+              strong= ' Front-end developer '
             = "and love everything related to web. I'm obsessed with "
             strong= 'performance '
             = 'and '
