--- a/source/assets/_sass/components/hero.sass
+++ b/source/assets/_sass/components/hero.sass
@@ -27,7 +27,7 @@
   .logo
     &__icon
       opacity: 0
-      transform: translate(0, -30px)
+      transform: translate3d(0, -30px, 0)
       animation-name: fadeInDown
       animation-fill-mode: forwards
       animation-duration: .6s
@@ -36,7 +36,7 @@
 
     &__name
       opacity: 0
-      transform: translate(0, -30px)
+      transform: translate3d(0, -30px, 0)
       animation-name: fadeInDown
       animation-fill-mode: forwards
       animation-duration: .6s
