--- a/source/assets/_sass/components/page.sass
+++ b/source/assets/_sass/components/page.sass
@@ -42,6 +42,14 @@
     font-size: 3.2rem
     margin: 0
 
+    opacity: 0
+    transform: translate3d(0, -30px, 0)
+
+    animation-name: fadeInDown
+    animation-fill-mode: forwards
+    animation-duration: .6s
+    animation-delay: .1s
+
     +media($tablet-large)
       font-size: 4rem
 
