--- a/source/localizable/about.br.html.slim
+++ b/source/localizable/about.br.html.slim
@@ -5,7 +5,7 @@ body_class: theme-primary
 ---
 
 section
-  header.page-title.js-text-parallax
+  header.page-title
     h1 Sobre mim
 
   .container
