--- a/source/localizable/about.en.html.slim
+++ b/source/localizable/about.en.html.slim
@@ -5,7 +5,7 @@ body_class: theme-tertiary
 ---
 
 section
-  header.page-title.js-text-parallax
+  header.page-title
     h1 About me
 
   .container
