--- a/source/assets/_sass/components/article.sass
+++ b/source/assets/_sass/components/article.sass
@@ -38,6 +38,11 @@
   +media($desktop)
     font-size: 2.2rem
 
+.article-presentation
+  color: darken(#fff, 15%)
+  font-weight: 300
+  letter-spacing: .06em
+
 .blog-list
   .article p
     margin-bottom: 0
