Fixing article typo

--- a/source/posts/2017-01-01-retro-2016-planing-2017.md.erb
+++ b/source/posts/2017-01-01-retro-2016-planing-2017.md.erb
@@ -12,9 +12,9 @@ tags:
 
 ## Retro 2016
 
-2016 não foi um ano ruim, tanto na minha vida profissional nem na vida pessoal, confesso que tive alguns obstáculos mas todos foram ultrapassados com sucesso.
+2016 não foi um ano ruim, tanto na minha vida profissional quando na minha vida pessoal, confesso que tive alguns obstáculos, mas todos foram ultrapassados com sucesso.
 
-Ele pode ter sido um ano ruim pro Brasil e pro mundo, grandes desastres, fiasco da política, morte de grandes artistas, mas eu, pessoalmente tenho que agradecer muito por minha vida ser tão maravilhosa como ela é, ter um trabalho que eu gosto muito, ter uma família maravilhosa, ter amigos próximos e pessoas próximas que me querem bem.
+Ele pode ter sido um ano ruim para Brasil e para mundo, grandes desastres, fiasco da política, morte de grandes artistas, mas eu pessoalmente tenho que agradecer muito por minha vida ser maravilhosa como ela é, ter um trabalho que eu gosto muito, uma família maravilhosa, amigos próximos e pessoas próximas que me querem bem.
 
 ### Aprendizado...
 
@@ -22,15 +22,15 @@ Ele pode ter sido um ano ruim pro Brasil e pro mundo, grandes desastres, fiasco 
 
 Esse ano foi um ano de aprendizado, tanto para minha vida profissional quanto para vida pessoal.
 
-Aprendi a questionar mais, entender o que as pessoas ao meu redor estão fazendo e o que eu estou fazendo aqui pra ajudar essas pessoas.
+Aprendi a questionar mais, entender o que as pessoas ao meu redor estão fazendo e o que eu estou fazendo para ajudar essas pessoas.
 
 Aprendi que eu não sei o suficiente e que tenho que aprender muita coisa ainda pela frente, e isso me custou um emprego e um circulo de boas amizades.
 
-Aprendi que amigos verdadeiros são os que estão com você não só nas alegrias mas nas tristezas e fazes ruins da sua vida.
+Aprendi que amigos verdadeiros são os que estão com você não só nas alegrias, mas nas tristezas e fases ruins da sua vida.
 
 Aprendi a questionar padrões.
 
-Aprendi que oportunidades não vem do nada, você que corre atrás e traz elas pra perto de você.
+Aprendi que oportunidades não vem do nada, você que corre atrás e traz elas para perto de você.
 
 Aprendi que ouvir mais e falar menos não é tão fácil assim.
 
@@ -52,9 +52,9 @@ Eu consegui ser notado por algumas empresas legais como a **[Pipefy](http://www.
 
 Tudo através do que fiz pela comunidade (foi pouco mas fiz), criando temas para [Jekyll](http://jekyllrb.com), ajudando em discussões de front-end, enviando contribuições em alguns repositórios no [github](https://github.com/nandomoreirame) e compartilhando meu conhecimento como tutor no [Centro de Treinamento](https://github.com/training-center) e escrevendo nesse pequeno [blog](/blog).
 
-Eu tive a oportunidade de trabalhar em uma startup chamada **[Pipefy](http://www.pipefy.com/)**, onde trabalhei com grandes mentes que me ensinaram grandes coisas, infelizmente não durou o tempo que eu gostaria mas valeu a pena cada dia de trabalho.
+Eu tive a oportunidade de trabalhar em uma startup chamada **[Pipefy](http://www.pipefy.com/)**, onde trabalhei com grandes mentes que me ensinaram grandes coisas, infelizmente não durou o tempo que eu gostaria, mas valeu a pena cada dia de trabalho.
 
-Em 2016 eu comecei a trabalhar na **[LojasKD](https://www.lojaskd.com.br/)**, onde tenho o prazer de trabalhar com pessoas incríveis e estou muito feliz em poder ajudar a melhorar e construir um projeto que vende algumas dezenas de milhares por dia.
+Em 2016 eu comecei a trabalhar na **[LojasKD](https://www.lojaskd.com.br/)**, onde tenho o prazer de trabalhar com pessoas incríveis, estou muito feliz em poder ajudar a melhorar e construir um projeto que vende algumas dezenas de milhares por dia.
 
 ---
 
@@ -62,19 +62,19 @@ Em 2016 eu comecei a trabalhar na **[LojasKD](https://www.lojaskd.com.br/)**, on
 
 Quero fazer em 2017 o dobro das coisas que fiz em 2016.
 
-Quero **ajudar** o máximo de pessoas a encontrarem o seu caminho no mundo do desenvolvimento.
+**Ajudar** o máximo de pessoas a encontrarem o seu caminho no mundo do desenvolvimento.
 
-Quero **escrever mais** no meu [blog](/blog).
+**Escrever mais** no meu [blog](/blog).
 
-Quero **fazer mais** projetos pequenos e grandes.
+**Fazer mais** projetos pequenos e grandes.
 
-Quero **aprender mais** sobre **acessibilidade**, **UX** e **SEO**.
+**Aprender mais** sobre **acessibilidade**, **UX** e **SEO**.
 
-Quero **aprender** sobre testes em **JavaScript** e **aprender mais** sobre **es6/es7**.
+**Aprender** sobre testes em **JavaScript** e **aprender mais** sobre **es6/es7**.
 
-Quero poder **palestrar** mais e participar mais de eventos de tecnologia.
+Quero poder **palestrar** e participar mais de eventos de tecnologia.
 
-Quero **ler mais livros**, não lembro quantos eu li em 2016 mas quero dobrar ou triplicar a quantidade em 2017.
+**Ler mais livros**, não lembro quantos eu li em 2016 mas quero dobrar ou triplicar a quantidade em 2017.
 
 Quero **mudar o mundo** a minha volta, mudar **pensamentos**, mudar **atitudes**.
 
@@ -88,7 +88,7 @@ Quero fazer a diferença.
 
 Eita esse 2016 hein...
 
-Pra mim foi um ano de **contribuições**, **ensino**, **aprendizado** e **trabalho duro**, espero que esse legado continue em 2017 e em dobro.
+Foi um ano de **contribuições**, **ensino**, **aprendizado** e **trabalho duro**, espero que esse legado continue em 2017 e em dobro.
 
 E o seu 2016 como foi?
 
