Add script for addthis

--- a/source/layouts/posts.html.slim
+++ b/source/layouts/posts.html.slim
@@ -103,5 +103,6 @@ html.no-js lang=t(:lang)
 
     - if build?
       = stylesheet_link_tag "main.min"
+      script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5869919cdfa51391" type="text/javascript"
     - else
       = stylesheet_link_tag "main"
