--- a/source/assets/_sass/utils/variables.sass
+++ b/source/assets/_sass/utils/variables.sass
@@ -22,7 +22,7 @@ $color-white       : #fff
 $color-black       : #000
 $color-silver      : #ceddd8
 $color-gray        : #222
-$color-base        : rgba($color-black, .8)
+$color-base        : lighten($color-black, 25%)
 $background-base   : darken($color-white, 4%)
 $border-color-base : lighten($color-silver, 6%)
 $input-background  : $color-white
