--- a/source/posts/2017-01-01-retro-2016-planing-2017.md.erb
+++ b/source/posts/2017-01-01-retro-2016-planing-2017.md.erb
@@ -56,6 +56,11 @@ Eu tive a oportunidade de trabalhar em uma startup chamada **[Pipefy](http://www
 
 Em 2016 eu comecei a trabalhar na **[LojasKD](https://www.lojaskd.com.br/)**, onde tenho o prazer de trabalhar com pessoas incríveis, estou muito feliz em poder ajudar a melhorar e construir um projeto que vende algumas dezenas de milhares por dia.
 
+<figure class="image">
+  <%= image_tag '/assets/images/posts/2017/01/meu-github-em-2016.png', alt: 'Meu Github em 2016' %>
+  <figcaption>Meu Github em 2016</figcaption>
+</figure>
+
 ---
 
 ## Planing 2017
