--- a/source/assets/_sass/components/navbar.sass
+++ b/source/assets/_sass/components/navbar.sass
@@ -21,6 +21,8 @@
 
   &:hover,
   &:focus
+    background-color: transparent
+
     .rect-top
       transform: translateY(-2px)
 
@@ -62,6 +64,7 @@
     color: $color-white
     transition: all .2s ease-in-out
     position: relative
+    padding: 0 .5em
 
     &::after
       content: ""
@@ -77,6 +80,7 @@
     &:hover,
     &:active
       text-decoration: none
+      background-color: transparent
 
     &:hover,
     &:active
