fixing opengraph image

--- a/source/partials/_social-opengraph.html.slim
+++ b/source/partials/_social-opengraph.html.slim
@@ -3,11 +3,11 @@
   meta content="website" property="og:type"
   meta content="#{site_url}#{current_page.url}" property="og:url"
   meta content="#{site_author}" property="og:site_name"
-  meta content="#{site_url}/assets/images/social.jpg" property="og:image"
+  meta content="/assets/images/social.jpg" property="og:image"
 
   meta content="summary_large_image" name="twitter:card"
   meta content="#{site_url}" name="twitter:site"
   meta content="#{twitter}" name="twitter:creator"
   meta content="#{site_title}" name="twitter:title"
   meta content="#{site_description}" name="twitter:description"
-  meta content="#{site_url}/assets/images/social.jpg" name="twitter:image"
+  meta content="/assets/images/social.jpg" name="twitter:image"
