--- a/source/assets/_sass/components/card.sass
+++ b/source/assets/_sass/components/card.sass
@@ -23,7 +23,7 @@
 
   &:hover,
   &:focus
-    box-shadow: 0 15px 65px -10px rgba($color-gray, .3);
+    box-shadow: 0 15px 65px -10px rgba($color-gray, .3)
 
   +media($tablet)
     padding: $spacing-base
