--- a/source/posts/2014-07-13-criando-formulario-de-contato-para-wordpress-com-odin-framework.md.erb
+++ b/source/posts/2014-07-13-criando-formulario-de-contato-para-wordpress-com-odin-framework.md.erb
@@ -6,10 +6,10 @@ date: 2014-07-13 15:57:09
 categories:
 - wordpress
 tags:
-- iniciantes
-- odin
-- php
-- wordpress
+- Iniciante
+- Odin
+- PHP
+- WordPress
 ---
 
 <div class="image">
