--- a/source/posts/2017-01-07-comece-com-gulpjs.md.erb
+++ b/source/posts/2017-01-07-comece-com-gulpjs.md.erb
@@ -148,6 +148,20 @@ Basta rodar o comando: `gulp hello` no seu terminal que a mágica vai acontecer.
   <%= image_tag '/assets/images/posts/2017/01/comece-com-gulp-hello.png', alt: 'Imagem do terminal: commando gulp hello' %>
 </div>
 
+## Comandos
+
+Você pode obter a lista de comandos do Gulp apenas digitando o commando: `gulp --help` no terminal.
+
+<div class="image">
+  <%= image_tag '/assets/images/posts/2017/01/comece-com-gulp-help.png', alt: 'Imagem do terminal: commando gulp --help' %>
+</div>
+
+Um comando bem interessante é o que lista todas as tasks do projeto: `gulp --tasks`
+
+<div class="image">
+  <%= image_tag '/assets/images/posts/2017/01/comece-com-gulp-tasks.png', alt: 'Imagem do terminal: commando gulp --tasks' %>
+</div>
+
 ---
 
 ## Concluindo..
