--- a/source/posts/2017-01-07-comece-com-gulpjs.md.erb
+++ b/source/posts/2017-01-07-comece-com-gulpjs.md.erb
@@ -1,7 +1,7 @@
 ---
 title: "Comece com Gulp"
 presentation: “gulp is a toolkit for automating painful or time-consuming tasks in your development workflow, so you can stop messing around and build something.”
-description: "Eu particularmente gosto muito de automatizados de tarefas, ou como são conhecidos pelo termo em inglês: Task Runners."
+description: "Eu particularmente gosto muito de ganhar tempo com o desenvolvimento dos meus projetos, e usar automatizador de tarefas me dá esse poder."
 date: 2017-01-07 17:52 BRST
 comments: true
 image: /assets/images/posts/2015/08/meu-ambiente-gulpjs.png
@@ -15,20 +15,20 @@ tags:
 
 Eu particularmente gosto muito de ganhar tempo com o desenvolvimento dos meus projetos e usar automatizador de tarefas me dá esse poder.
 
-Automatizadores de tarefas ou como são conhecidos pelo termo em inglês **[Task Runners](https://goo.gl/Zugcvt)** tem a capacidade de fazer muita coisa, facilitam muito não só no desenvolvimento dos projetos mas também nos builds e deploys, cara é simplesmente lindo.
+Automatizadores de tarefas ou como são conhecidos pelo termo em inglês **[Task Runners](https://goo.gl/Zugcvt)**, tem a capacidade de fazer muita coisa, facilitam muito não só no desenvolvimento dos projetos mas também nos builds e deploys, cara é simplesmente lindo.
 
 Já usei o [Gruntjs](http://gruntjs.com/) e [Rake tasks](https://github.com/ruby/rake) do Ruby, ambos são muito bons e tem suas finalidades, mas hoje vou falar sobre o magnífico [Gulpjs](http://gulpjs.com/).
 
 ## Poque eu deveria usar um Task Runner?
 
-Usar um automatizador de tarefas vai te traz muitas vantagens, das quais se você desfrutar nunca mais vai querer começar o desenvolvimento de um novo projeto sem elas.
+Usar um automatizador de tarefas te traz muitas vantagens, das quais se você desfrutar nunca mais vai querer começar o desenvolvimento de um novo projeto sem elas.
 
-Abaixo eu vou listar algumas, se e não te fizer brilhar os olhos você talvez não precisará de uma task runner.
+Abaixo eu vou listar algumas, se não te fizer brilhar os olhos você talvez não precisará de um **task runner**.
 
 Com apenas um comando você consegue:
 
  * Fazer a compressão de centenas de imagens de um projeto antigo (eu precisei fazer isso);
- * Deploy para qualquer servidor sftp, ssh ou até mesmo pra amazon S3;
+ * Deploy para qualquer servidor sftp, ssh ou até mesmo para amazon S3;
  * Fazer Watch de pré-processadores e template engines;
  * Subir servidores locais de qualquer linguagem;
  * Executar os testes do seu projeto;
@@ -41,11 +41,11 @@ Eu sempre gosto de dizer: "Ele me faz ter mais tempo para o meu café".
 
 ## Porque eu deveria usar o GulpJS?
 
-O GulpJS te dá todas as vantagens que citei no bloco anterior, além de:
+O **Gulp** te dá todas as vantagens que citei no bloco anterior, além de:
 
  * Ser super-rápido. Performance com certeza é uma vantagem grande do Gulpjs;
  * Simples e fácil de implementar. Ele é simples e direto, com certeza você vai gostar;
- * Quantidade enorme de plugins em seu repositório. O que você imaginar o Gulp tem um componente pra isso.
+ * Quantidade enorme de plugins em seu repositório. O que você imaginar o Gulp tem um componente para isso.
  * ... e muito mais.
 
 > "gulp is a toolkit for automating painful or time-consuming tasks in your development workflow, so you can stop messing around and build something."
@@ -128,7 +128,7 @@ Nesse arquivo vamos requirir o Gulp usando [ComomJS](https://pt.wikipedia.org/wi
 var gulp = require('gulp');
 ```
 
-Na primeira linha temos o `'use strict'`, se você não sabe pra que ser eu indico assistir a palestra de [Javascript Secrets](https://youtu.be/7Ur9zN2vMcs?t=1m7s) do Fernando Daciuk, muito legal. Já na segunda linha criamos uma variável chamada **gulp**, a qual iremos usar muito por todo nosso código.
+Na primeira linha temos o `'use strict'`, se você não sabe para que ser eu indico assistir a palestra de [Javascript Secrets](https://youtu.be/7Ur9zN2vMcs?t=1m7s) do Fernando Daciuk, muito legal. Já na segunda linha criamos uma variável chamada **gulp**, a qual iremos usar muito por todo nosso código.
 
 Vamos ao Hello World.
 
@@ -166,7 +166,7 @@ Um comando bem interessante é o que lista todas as tasks do projeto: `gulp --ta
 
 ## Concluindo..
 
-Esse foi apenas apenas o primeiro passo para você começar com Gulpjs, vai por mim, tem muitas coisas legais que da pra fazer com apenas uma task do gulp.
+Esse foi apenas o primeiro passo para você começar com Gulpjs, vai por mim, tem muitas coisas legais que da pra fazer com uma task do gulp.
 
 Espero que tenha gostado do artigo, é simples mas útil.
 
