--- a/source/posts/2017-01-07-comece-com-gulpjs.md.erb
+++ b/source/posts/2017-01-07-comece-com-gulpjs.md.erb
@@ -128,7 +128,7 @@ Nesse arquivo vamos requirir o Gulp usando [ComomJS](https://pt.wikipedia.org/wi
 var gulp = require('gulp');
 ```
 
-Na primeira linha temos o `'use strict'`, se você não sabe para que ser eu indico assistir a palestra de [Javascript Secrets](https://youtu.be/7Ur9zN2vMcs?t=1m7s) do Fernando Daciuk, muito legal. Já na segunda linha criamos uma variável chamada **gulp**, a qual iremos usar muito por todo nosso código.
+Na primeira linha temos o `'use strict'`, se você não sabe para que serve o **'use strict'** eu indico assistir a palestra de [Javascript Secrets](https://youtu.be/7Ur9zN2vMcs?t=1m7s) do Fernando Daciuk, muito legal. Já na segunda linha criamos uma variável chamada **gulp**, a qual iremos usar muito por todo nosso código.
 
 Vamos ao Hello World.
 
