Add external link target blank and icon

--- a/source/assets/_sass/base/typography.sass
+++ b/source/assets/_sass/base/typography.sass
@@ -14,6 +14,7 @@ body
 a
   color: $color-quaternary
   text-decoration: underline
+  transition: background-color .15s ease-in-out, color .15s ease-in-out
   border: 0
 
   &:hover,
