--- a/source/assets/_sass/components/article.sass
+++ b/source/assets/_sass/components/article.sass
@@ -106,7 +106,7 @@ iframe
     &:after
       display: inline-block
       content: ''
-      background-image: url(../images/external-link.svg)
+      background-image: url(/assets/images/external-link.svg)
       background-size: 100%
       width: 20px
       height: 20px
